--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-lg-5 order-lg-2 order1">
               <div class="ms-lg-auto text-center">
-                <img src="/images/top-right-img.png" class="img-fluid" alt="">
+                <img src="images/top-right-img.png" class="img-fluid" alt="">
               </div>
             </div>
           </div>
